--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wsdl-tsclient",
+  "name": "@benasher44/wsdl-tsclient",
   "version": "1.4.0",
   "description": "Generate typescript soap client with typescript definitons from WSDL file.",
   "main": "dist/src/index.js",
